syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

message Planet {
    string name = 1;
    int32 id = 2;
    string climate = 3;
    repeated string terrain = 4;
    int32 timesOnMovies = 5;
    google.protobuf.Timestamp added_at = 6;
}
